--- a/app/transactions/templates/total.html
+++ b/app/transactions/templates/total.html
@@ -3,7 +3,7 @@
     {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
     <div class="row">
          <div class="mx-auto">
-             <h2>Current Balance</h2>
+             <h2>Total Current Balance</h2>
              {{ render_form(form) }}
          </div>
     </div>
