--- a/app/transactions/templates/upload.html
+++ b/app/transactions/templates/upload.html
@@ -3,12 +3,8 @@
     {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
     <div class="row">
          <div class="mx-auto">
-             <h2>Upload Transactions</h2>
+             <h2>Upload Transactions Here</h2>
              {{ render_form(form) }}
-         </div>
-         <div>
-             <h3>Current Balance</h3>
-
          </div>
     </div>
 {% endblock %}
