added starting repo to the about.html

--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -11,6 +11,9 @@
             the
             account that are identified as such in the CSV file.
         </p>
+        <p>
+            Starting Repository:  <a href="https://github.com/kaw393939/final_flask_start">https://github.com/kaw393939/final_flask_start</a>
+        </p>
     <h1>Requirements:</h1>
         <ol type="1">
             <li>Your project must have a log file with an entry for each time a user uploads a CSV account transaction
