--- a/app/simple_pages/templates/welcome.html
+++ b/app/simple_pages/templates/welcome.html
@@ -3,7 +3,7 @@
     <div class="row">
         <article class="col-12">
             <h1>Welcome</h1>
-            Please register your username and upload a CSV file of your bank transactions.
+            Welcome to the Project 4 of the class IS601 at NJIT.
         </article>
     </div>
 {% endblock %}
